wk_taa_taaqa/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Contact__c</fullName>
        <inlineHelpText>Questions about this Campaign? Please contact the Product Marketing Manager or other resource listed here.</inlineHelpText>
        <label>Campaign Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Short_Description__c</fullName>
        <description>This field will be carried onto the Campaign Member, and will be the short description of the Campaign that reps see when they look at a Lead.</description>
        <label>Campaign Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conversion__c</fullName>
        <formula>IF( NumberOfResponses = 0,0,
 NumberOfOpportunities /  NumberOfResponses )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>New Acquisition</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Wallet Share</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_ID__c</fullName>
        <label>Marketing ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_ROI__c</fullName>
        <formula>IF( AND( ActualCost &gt; 0, AmountAllOpportunities &gt;0) , AmountAllOpportunities / ActualCost , NULL)</formula>
        <label>Marketing ROI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Market__c</fullName>
        <label>Target Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>CORPPUB</fullName>
                </value>
                <value>
                    <fullName>CORPSWD</fullName>
                </value>
                <value>
                    <fullName>CORPSWI</fullName>
                </value>
                <value>
                    <fullName>PRORL</fullName>
                </value>
                <value>
                    <fullName>PROSW</fullName>
                </value>
                <value>
                    <fullName>RL</fullName>
                </value>
                <value>
                    <fullName>SMALLPRO</fullName>
                </value>
                <value>
                    <fullName>TED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_Tier_Campaign__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Parent.Parent.Id ,Parent.Parent.Name,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Tier Campaign</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_2014_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.START_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>All 2014 Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>